# relationalai-sdk-python

./: README.md  default.nix  pyproject.toml  setup.py  tox.ini
client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
client/.openapi-generator/: FILES
client/cloud_docs/: ComputeEventInfo.md  CreateComputeResponseProtocol.md  DatabaseInfo.md  DefaultApi.md  GetAccountCreditsResponse.md  ListComputeEventsResponse.md
client/delve/: __init__.py  cloud_connection.py  connection.py  delve_client.py  delve_cloud_client.py  local_connection.py  management_connection.py  rai_config.py
client/docs/: AbstractProblem.md  Action.md  ActionResult.md  Appl.md  ApplAllOf.md  Area.md  AzureIntegration.md  AzureIntegrationAllOf.md  CSVFileSchema.md  CSVFileSchemaAllOf.md  CSVFileSyntax.md  CSVFileSyntaxAllOf.md  CardinalityAction.md  CardinalityActionAllOf.md  CardinalityActionResult.md  CardinalityActionResultAllOf.md  ClientProblem.md  ClientProblemAllOf.md  CollectProblemsAction.md  CollectProblemsActionAllOf.md  CollectProblemsActionResult.md  CollectProblemsActionResultAllOf.md  Cons.md  ConsAllOf.md  DefaultApi.md  DefaultIntegration.md  ExceptionProblem.md  ExceptionProblemAllOf.md  FileSchema.md  FileSyntax.md  ICViolation.md  ImportAction.md  ImportActionAllOf.md  ImportActionResult.md  InfraError.md  InstallAction.md  InstallActionAllOf.md  InstallActionResult.md  Integration.md  IntegrityConstraintProblem.md  (+59 more)
client/integration_tests/: test_cardinality.py  test_clone_database.py  test_collect_problems.py  test_create_database.py  (+9 more)
(+673 files in other folders)
