[tool.poetry]
name = "relationalai-sdk"
version = "1.1.4"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "relationalai" },
    { include = "rai_api" },
    { include = "raicloud_api" }
]

[tool.poetry.dependencies]
python = "^3.6"
nulltype = "^2.3.1"
python_dateutil = "^2.5.3"
setuptools = "^21.0.0"
urllib3 = "^1.26.4"
ed25519 = "1.5"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
